# indeed-agent

./: .gitignore  README.md  pyproject.toml
src/: agent.py  browser.py  distance.py  field_inventory.py  form_analyzer.py  form_filler.py  job_scorer.py  job_searcher.py  llm_answerer.py  main.py  ollama_manager.py  profile_manager.py  prompt_parser.py  qa_logger.py  storage.py
tests/search-jobs/: test_search.py
