[project]
name = "openclaw-indeed"
version = "0.1.0"
description = "Indeed job application agent"
authors = [
    {name = "matt",email = "matmigg0804@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "playwright (>=1.59.0,<2.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
